--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 
-parts = py
+parts = py tools
 versions = versions
 allow-picked-versions = false
 
@@ -11,8 +11,14 @@ eggs = argparse
 interpreter = py
 
 
+[tools]
+recipe = plone.recipe.command
+command = git clone git@github.com:plone/git-svn-abandon.git
+
+
 [versions]
 argparse = 1.2.1
 distribute = 0.6.15
+plone.recipe.command = 1.1
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
