Include svn2git

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,10 @@
 [buildout]
 
-parts = py tools
+parts =
+  py
+  git-svn
+  svn2git
+
 versions = versions
 allow-picked-versions = false
 
@@ -11,9 +15,19 @@ eggs = argparse
 interpreter = py
 
 
-[tools]
+[git-svn]
 recipe = plone.recipe.command
 command = git clone git@github.com:plone/git-svn-abandon.git
+
+
+[svn2git]
+recipe = plone.recipe.command
+command =
+    [ ! -e svn2git ] && git clone git://gitorious.org/svn2git/svn2git.git
+    cd svn2git
+    qmake
+    make
+    cd ..
 
 
 [versions]
