Update approach to use svn2git to cover all the weird project moves

--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -4,11 +4,11 @@ create repository Products.LinguaPlone
 end repository
 
 
+# LinguaPlone
 match /(LinguaPlone|Products.LinguaPlone)/(trunk|trunk2)/
   repository Products.LinguaPlone 
   branch master
 end match
-
 
 match /(LinguaPlone|Products.LinguaPlone)/branches/([^/]+)/
   repository Products.LinguaPlone 
@@ -20,7 +20,7 @@ match /(LinguaPlone|Products.LinguaPlone)/tags/([^/]+)/
   branch refs/tags/\2
 end match
 
+
 # ignore everything else
 match /
 end match
-
