Add initial rules for archetypes repo, avoid noisy `--add-metadata` flag

--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -1,5 +1,161 @@
 # rules for the archetypes repository
 
+create repository archetypes.kss
+end repository
+
+create repository archetypes.referencebrowserwidget
+end repository
+
+create repository archetypes.schemaextender
+end repository
+
+create repository Products.Archetypes
+end repository
+
+create repository Products.ATReferenceBrowserWidget
+end repository
+
+create repository Products.Marshall
+end repository
+
+create repository Products.MimetypesRegistry
+end repository
+
+create repository Products.PortalTransforms
+end repository
+
+create repository Products.validation
+end repository
+
+
+match /(archetypes.kss|archetypes.schemaextender)/trunk/
+  repository \1
+  branch master
+end match
+
+match /(archetypes.kss|archetypes.schemaextender)/branches/([^/]+)/
+  repository \1
+  branch \2
+end match
+
+match /(archetypes.kss|archetypes.schemaextender)/tags/([^/]+)/
+  repository \1
+  branch refs/tags/\2
+end match
+
+
+match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/trunk/
+  repository archetypes.referencebrowserwidget
+  branch master
+end match
+
+match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/branches/([^/]+)/
+  repository archetypes.referencebrowserwidget
+  branch \1
+end match
+
+match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/tags/([^/]+)/
+  repository archetypes.referencebrowserwidget
+  branch refs/tags/\1
+end match
+
+
+match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/trunk/
+  repository Products.ATReferenceBrowserWidget
+  branch master
+end match
+
+match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/branches/([^/]+)/
+  repository Products.ATReferenceBrowserWidget
+  branch \1
+end match
+
+match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/tags/([^/]+)/
+  repository Products.ATReferenceBrowserWidget
+  branch refs/tags/\1
+end match
+
+
+match /(Archetypes|Products.Archetypes)/trunk/
+  repository Products.Archetypes
+  branch master
+end match
+
+match /(Archetypes|Products.Archetypes)/branches/([^/]+)/
+  repository Products.Archetypes
+  branch \2
+end match
+
+match /(Archetypes|Products.Archetypes)/tags/([^/]+)/
+  repository Products.Archetypes
+  branch refs/tags/\2
+end match
+
+
+match /(Marshall|Products.Marshall)/trunk/
+  repository Products.Marshall
+  branch master
+end match
+
+match /(Marshall|Products.Marshall)/branches/([^/]+)/
+  repository Products.Marshall
+  branch \2
+end match
+
+match /(Marshall|Products.Marshall)/tags/([^/]+)/
+  repository Products.Marshall
+  branch refs/tags/\2
+end match
+
+
+match /(MimetypesRegistry|Products.MimetypesRegistry)/trunk/
+  repository Products.MimetypesRegistry
+  branch master
+end match
+
+match /(MimetypesRegistry|Products.MimetypesRegistry)/branches/([^/]+)/
+  repository Products.MimetypesRegistry
+  branch \2
+end match
+
+match /(MimetypesRegistry|Products.MimetypesRegistry)/tags/([^/]+)/
+  repository Products.MimetypesRegistry
+  branch refs/tags/\2
+end match
+
+
+match /(PortalTransforms|Products.PortalTransforms)/trunk/
+  repository Products.PortalTransforms
+  branch master
+end match
+
+match /(PortalTransforms|Products.PortalTransforms)/branches/([^/]+)/
+  repository Products.PortalTransforms
+  branch \2
+end match
+
+match /(PortalTransforms|Products.PortalTransforms)/tags/([^/]+)/
+  repository Products.PortalTransforms
+  branch refs/tags/\2
+end match
+
+
+match /(validation|Products.validation)/trunk/
+  repository Products.validation
+  branch master
+end match
+
+match /(validation|Products.validation)/branches/([^/]+)/
+  repository Products.validation
+  branch \2
+end match
+
+match /(validation|Products.validation)/tags/([^/]+)/
+  repository Products.validation
+  branch refs/tags/\2
+end match
+
+
 
 # ignore everything else
 match /
