--- a/rules-collective.cfg
+++ b/rules-collective.cfg
@@ -4,3 +4,31 @@
 # ignore everything else
 match /
 end match
+
+# TODO
+# Products.CMFFormController = http://svn.plone.org/svn/collective/CMFFormController
+# Products.CMFTestCase = http://svn.plone.org/svn/collective/Products.CMFTestCase
+# Products.CMFDynamicViewFTI = http://svn.plone.org/svn/collective/CMFDynamicViewFTI
+# plone.recipe.zope2instance = http://svn.plone.org/svn/collective/buildout/plone.recipe.zope2instance
+# Products.CMFEditions = http://svn.plone.org/svn/collective/Products.CMFEditions
+# Products.GroupUserFolder = http://svn.plone.org/svn/collective/Products.GroupUserFolder
+# Products.i18ntestcase = http://svn.plone.org/svn/collective/Products.i18ntestcase
+# plone.recipe.zeoserver = http://svn.plone.org/svn/collective/buildout/plone.recipe.zeoserver
+# Products.SecureMailHost = http://svn.plone.org/svn/collective/SecureMailHost
+# Products.TinyMCE = http://svn.plone.org/svn/collective/Products.TinyMCE
+# Products.CMFDiffTool = http://svn.plone.org/svn/collective/Products.CMFDiffTool
+# Products.PasswordResetTool = http://svn.plone.org/svn/collective/Products.PasswordResetTool
+# Products.CMFQuickInstallerTool = http://svn.plone.org/svn/collective/CMFQuickInstallerTool
+# Products.PlacelessTranslationService = http://svn.plone.org/svn/collective/PlacelessTranslationService
+# borg.localrole = http://svn.plone.org/svn/collective/borg/components/borg.localrole
+# wicked = http://svn.plone.org/svn/collective/wicked
+# Products.contentmigration = http://svn.plone.org/svn/collective/Products.contentmigration
+# txtfilter = http://svn.plone.org/svn/collective/txtfilter
+# Products.ATContentTypes = http://svn.plone.org/svn/collective/Products.ATContentTypes
+# Products.statusmessages = http://svn.plone.org/svn/collective/statusmessages
+# Products.PlonePAS = http://svn.plone.org/svn/collective/Products.PlonePAS
+# Products.PloneTestCase = http://svn.plone.org/svn/collective/Products.PloneTestCase
+# collective.monkeypatcher = http://svn.plone.org/svn/collective/collective.monkeypatcher
+# Products.PloneLanguageTool = http://svn.plone.org/svn/collective/PloneLanguageTool
+# plone.recipe.alltests = http://svn.plone.org/svn/collective/buildout/plone.recipe.alltests
+# Products.CMFPlacefulWorkflow = http://svn.plone.org/svn/collective/Products.CMFPlacefulWorkflow
