--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -24,3 +24,69 @@ end match
 # ignore everything else
 match /
 end match
+
+
+# TODO
+# plone.app.testing = http://svn.plone.org/svn/plone/plone.app.testing
+# plone.portlet.collection = http://svn.plone.org/svn/plone/plone.portlet.collection
+# plone.supermodel = http://svn.plone.org/svn/plone/plone.supermodel
+# plone.memoize = http://svn.plone.org/svn/plone/plone.memoize
+# plone.app.blob = http://svn.plone.org/svn/plone/plone.app.blob
+# plone.app.contentrules = http://svn.plone.org/svn/plone/plone.app.contentrules
+# Products.ExtendedPathIndex = http://svn.plone.org/svn/plone/Products.ExtendedPathIndex
+# plone.app.form = http://svn.plone.org/svn/plone/plone.app.form
+# plone.app.layout = http://svn.plone.org/svn/plone/plone.app.layout
+# plone.app.workflow = http://svn.plone.org/svn/plone/plone.app.workflow
+# plone.caching = http://svn.plone.org/svn/plone/plone.caching
+# plone.intelligenttext = http://svn.plone.org/svn/plone/plone.intelligenttext
+# plone.app.folder = http://svn.plone.org/svn/plone/plone.app.folder
+# plone.app.linkintegrity = http://svn.plone.org/svn/plone/plone.app.linkintegrity
+# plone.browserlayer = http://svn.plone.org/svn/plone/plone.browserlayer
+# plone.registry = http://svn.plone.org/svn/plone/plone.registry
+# plone.app.iterate = http://svn.plone.org/svn/plone/plone.app.iterate
+# plonetheme.sunburst = http://svn.plone.org/svn/plone/plonetheme.sunburst
+# plone.folder = http://svn.plone.org/svn/plone/plone.folder
+# plone.autoform = http://svn.plone.org/svn/plone/plone.autoform
+# plone.app.redirector = http://svn.plone.org/svn/plone/plone.app.redirector
+# plone.theme = http://svn.plone.org/svn/plone/plone.theme
+# plone.i18n = http://svn.plone.org/svn/plone/plone.i18n
+# plone.app.content = http://svn.plone.org/svn/plone/plone.app.content
+# plone.app.registry = http://svn.plone.org/svn/plone/plone.app.registry
+# plone.openid = http://svn.plone.org/svn/plone/plone.openid
+# plone.fieldsets = http://svn.plone.org/svn/plone/plone.fieldsets
+# plone.app.z3cform = http://svn.plone.org/svn/plone/plone.app.z3cform
+# plone.app.customerize = http://svn.plone.org/svn/plone/plone.app.customerize
+# plonetheme.classic = http://svn.plone.org/svn/plone/plonetheme.classic
+# plone.app.controlpanel = http://svn.plone.org/svn/plone/plone.app.controlpanel
+# plone.app.viewletmanager = http://svn.plone.org/svn/plone/plone.app.viewletmanager
+# plone.app.kss = http://svn.plone.org/svn/plone/plone.app.kss
+# Products.CMFPlone = http://svn.plone.org/svn/plone/Products.CMFPlone
+# plone.app.caching = http://svn.plone.org/svn/plone/plone.app.caching
+# plone.app.users = http://svn.plone.org/svn/plone/plone.app.users
+# plone.app.imaging = http://svn.plone.org/svn/plone/plone.app.imaging
+# plone.testing = http://svn.plone.org/svn/plone/plone.testing
+# Products.ResourceRegistries = http://svn.plone.org/svn/plone/ResourceRegistries
+# plone.app.contentmenu = http://svn.plone.org/svn/plone/plone.app.contentmenu
+# plone.app.jquerytools = http://svn.plone.org/svn/plone/plone.app.jquerytools
+# plone.portlets = http://svn.plone.org/svn/plone/plone.portlets
+# plone.app.uuid = http://svn.plone.org/svn/plone/plone.app.uuid
+# plone.stringinterp = http://svn.plone.org/svn/plone/plone.stringinterp
+# plone.contentrules = http://svn.plone.org/svn/plone/plone.contentrules
+# plone.app.portlets = http://svn.plone.org/svn/plone/plone.app.portlets
+# plone.app.upgrade = http://svn.plone.org/svn/plone/plone.app.upgrade
+# plone.cachepurging = http://svn.plone.org/svn/plone/plone.cachepurging
+# plone.app.openid = http://svn.plone.org/svn/plone/plone.app.openid
+# plone.scale = http://svn.plone.org/svn/plone/plone.scale
+# plone.indexer = http://svn.plone.org/svn/plone/plone.indexer
+# plone.app.discussion = http://svn.plone.org/svn/plone/plone.app.discussion
+# plone.keyring = http://svn.plone.org/svn/plone/plone.keyring
+# plone.app.vocabularies = http://svn.plone.org/svn/plone/plone.app.vocabularies
+# plone.portlet.static = http://svn.plone.org/svn/plone/plone.portlet.static
+# plone.app.i18n = http://svn.plone.org/svn/plone/plone.app.i18n
+# plone.outputfilters = http://svn.plone.org/svn/plone/plone.outputfilters
+# plone.uuid = http://svn.plone.org/svn/plone/plone.uuid
+# plone.protect = http://svn.plone.org/svn/plone/plone.protect
+# plone.session = http://svn.plone.org/svn/plone/plone.session
+# Products.LinguaPlone = http://svn.plone.org/svn/plone/Products.LinguaPlone
+# plone.locking = http://svn.plone.org/svn/plone/plone.locking
+# Plone = http://svn.plone.org/svn/plone/Plone
