Deal with some `"copy from"` log entries

--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -28,7 +28,7 @@ create repository Products.validation
 end repository
 
 
-match /(archetypes.kss|archetypes.schemaextender)/trunk/
+match /(archetypes.kss|archetypes.schemaextender)/(trunk|trunx)/
   repository \1
   branch master
 end match
@@ -60,7 +60,7 @@ match /MoreFieldsAndWidgets/archetypes.referencebrowserwidget/tags/([^/]+)/
 end match
 
 
-match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/trunk/
+match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/(trunk|trunk-old)/
   repository Products.ATReferenceBrowserWidget
   branch master
 end match
@@ -76,17 +76,17 @@ match /MoreFieldsAndWidgets/ATReferenceBrowserWidget/tags/([^/]+)/
 end match
 
 
-match /(Archetypes|Products.Archetypes)/trunk/
+match /(generator|Archetypes|Products.Archetypes)/trunk/
   repository Products.Archetypes
   branch master
 end match
 
-match /(Archetypes|Products.Archetypes)/branches/([^/]+)/
+match /(generator|Archetypes|Products.Archetypes)/branches/([^/]+)/
   repository Products.Archetypes
   branch \2
 end match
 
-match /(Archetypes|Products.Archetypes)/tags/([^/]+)/
+match /(generator|Archetypes|Products.Archetypes)/tags/([^/]+)/
   repository Products.Archetypes
   branch refs/tags/\2
 end match
@@ -132,6 +132,11 @@ end match
 match /(PortalTransforms|Products.PortalTransforms)/branches/([^/]+)/
   repository Products.PortalTransforms
   branch \2
+end match
+
+match /PortalTransforms/jfroche-phototransforms-branch/
+  repository Products.PortalTransforms
+  branch jfroche-phototransforms-branch
 end match
 
 match /(PortalTransforms|Products.PortalTransforms)/tags/([^/]+)/
