Ignore two failed branches

--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -33,6 +33,13 @@ match /(archetypes.kss|archetypes.schemaextender)/(trunk|trunx)/
   branch master
 end match
 
+# ignore branch that copied the root instead of the trunk and was deleted
+# immediately afterwards
+match /archetypes.kss/branches/plip10778-plone.uuid/
+  min revision 13353
+  max revision 13355
+end match
+
 match /(archetypes.kss|archetypes.schemaextender)/branches/([^/]+)/
   repository \1
   branch \2
@@ -148,6 +155,13 @@ end match
 match /(validation|Products.validation)/trunk/
   repository Products.validation
   branch master
+end match
+
+# ignore branch that copied the root instead of the trunk and was deleted
+# immediately afterwards
+match /validation/branches/gotcha-validation-i18n/
+  min revision 3860
+  max revision 3862
 end match
 
 match /(validation|Products.validation)/branches/([^/]+)/
