First step at plone rules

--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -1,22 +1,335 @@
 # rules for the plone repository
 
+create repository Plone
+end repository
+
+create repository Products.CMFPlone
+end repository
+
+create repository Products.ExtendedPathIndex
+end repository
+
 create repository Products.LinguaPlone
 end repository
 
+create repository Products.ResourceRegistries
+end repository
 
-# LinguaPlone
+create repository plone.app.blob
+end repository
+
+create repository plone.app.caching
+end repository
+
+create repository plone.app.content
+end repository
+
+create repository plone.app.contentmenu
+end repository
+
+create repository plone.app.contentrules
+end repository
+
+create repository plone.app.controlpanel
+end repository
+
+create repository plone.app.customerize
+end repository
+
+create repository plone.app.discussion
+end repository
+
+create repository plone.app.folder
+end repository
+
+create repository plone.app.form
+end repository
+
+create repository plone.app.i18n
+end repository
+
+create repository plone.app.imaging
+end repository
+
+create repository plone.app.iterate
+end repository
+
+create repository plone.app.jquerytools
+end repository
+
+create repository plone.app.kss
+end repository
+
+create repository plone.app.layout
+end repository
+
+create repository plone.app.linkintegrity
+end repository
+
+create repository plone.app.openid
+end repository
+
+create repository plone.app.portlets
+end repository
+
+create repository plone.app.redirector
+end repository
+
+create repository plone.app.registry
+end repository
+
+create repository plone.app.testing
+end repository
+
+create repository plone.app.upgrade
+end repository
+
+create repository plone.app.users
+end repository
+
+create repository plone.app.uuid
+end repository
+
+create repository plone.app.viewletmanager
+end repository
+
+create repository plone.app.vocabularies
+end repository
+
+create repository plone.app.workflow
+end repository
+
+create repository plone.app.z3cform
+end repository
+
+create repository plone.autoform
+end repository
+
+create repository plone.browserlayer
+end repository
+
+create repository plone.cachepurging
+end repository
+
+create repository plone.caching
+end repository
+
+create repository plone.contentrules
+end repository
+
+create repository plone.fieldsets
+end repository
+
+create repository plone.folder
+end repository
+
+create repository plone.i18n
+end repository
+
+create repository plone.indexer
+end repository
+
+create repository plone.intelligenttext
+end repository
+
+create repository plone.keyring
+end repository
+
+create repository plone.locking
+end repository
+
+create repository plone.memoize
+end repository
+
+create repository plone.openid
+end repository
+
+create repository plone.outputfilters
+end repository
+
+create repository plone.portlet.collection
+end repository
+
+create repository plone.portlet.static
+end repository
+
+create repository plone.portlets
+end repository
+
+create repository plone.protect
+end repository
+
+create repository plone.registry
+end repository
+
+create repository plone.scale
+end repository
+
+create repository plone.session
+end repository
+
+create repository plone.stringinterp
+end repository
+
+create repository plone.supermodel
+end repository
+
+create repository plone.testing
+end repository
+
+create repository plone.theme
+end repository
+
+create repository plone.uuid
+end repository
+
+create repository plonetheme.classic
+end repository
+
+create repository plonetheme.sunburst
+end repository
+
+
+match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/trunk/
+  repository ^1
+  branch master
+end match
+
+match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/branches/([^/]+)/
+  repository ^1
+  branch \2
+end match
+
+match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/tags/([^/]+)/
+  repository ^1
+  branch refs/tags/\2
+end match
+
+
+match /plone.portlet.(collection|static)/trunk/
+  repository ^1
+  branch master
+end match
+
+match /plone.portlet.(collection|static)/branches/([^/]+)/
+  repository ^1
+  branch \2
+end match
+
+match /plone.portlet.(collection|static)/tags/([^/]+)/
+  repository ^1
+  branch refs/tags/\2
+end match
+
+
+match /plonetheme.(classic|sunburst)/trunk/
+  repository ^1
+  branch master
+end match
+
+match /plonetheme.(classic|sunburst)/branches/([^/]+)/
+  repository ^1
+  branch \2
+end match
+
+match /plonetheme.(classic|sunburst)/tags/([^/]+)/
+  repository ^1
+  branch refs/tags/\2
+end match
+
+
+match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/trunk/
+  repository ^1
+  branch master
+end match
+
+match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/branches/([^/]+)/
+  repository ^1
+  branch \2
+end match
+
+match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/tags/([^/]+)/
+  repository ^1
+  branch refs/tags/\2
+end match
+
+
+match /(CMFPlone|Products.CMFPlone)/trunk/
+  repository Products.CMFPlone
+  branch master
+end match
+
+match /(CMFPlone|Products.CMFPlone)/branches/([^/]+)/
+  repository Products.CMFPlone
+  branch \2
+end match
+
+match /(CMFPlone|Products.CMFPlone)/tags/([^/]+)/
+  repository Products.CMFPlone
+  branch refs/tags/\2
+end match
+
+
+match /Plone/trunk/
+  repository Plone
+  branch master
+end match
+
+match /Plone/branches/([^/]+)/
+  repository Plone
+  branch \1
+end match
+
+match /Plone/tags/([^/]+)/
+  repository Plone
+  branch refs/tags/\1
+end match
+
+
+match /(ExtendedPathIndex|Products.ExtendedPathIndex)/trunk/
+  repository Products.ExtendedPathIndex
+  branch master
+end match
+
+match /(ExtendedPathIndex|Products.ExtendedPathIndex)/branches/([^/]+)/
+  repository Products.ExtendedPathIndex
+  branch \2
+end match
+
+match /(ExtendedPathIndex|Products.ExtendedPathIndex)/tags/([^/]+)/
+  repository Products.ExtendedPathIndex
+  branch refs/tags/\2
+end match
+
+
 match /(LinguaPlone|Products.LinguaPlone)/(trunk|trunk2)/
-  repository Products.LinguaPlone 
+  repository Products.LinguaPlone
   branch master
 end match
 
 match /(LinguaPlone|Products.LinguaPlone)/branches/([^/]+)/
-  repository Products.LinguaPlone 
+  repository Products.LinguaPlone
   branch \2
 end match
 
 match /(LinguaPlone|Products.LinguaPlone)/tags/([^/]+)/
-  repository Products.LinguaPlone 
+  repository Products.LinguaPlone
+  branch refs/tags/\2
+end match
+
+
+match /(ResourceRegistries|Products.ResourceRegistries)/trunk/
+  repository Products.ResourceRegistries
+  branch master
+end match
+
+match /(ResourceRegistries|Products.ResourceRegistries)/branches/([^/]+)/
+  repository Products.ResourceRegistries
+  branch \2
+end match
+
+match /(ResourceRegistries|Products.ResourceRegistries)/tags/([^/]+)/
+  repository Products.ResourceRegistries
   branch refs/tags/\2
 end match
 
@@ -24,69 +337,3 @@ end match
 # ignore everything else
 match /
 end match
-
-
-# TODO
-# plone.app.testing = http://svn.plone.org/svn/plone/plone.app.testing
-# plone.portlet.collection = http://svn.plone.org/svn/plone/plone.portlet.collection
-# plone.supermodel = http://svn.plone.org/svn/plone/plone.supermodel
-# plone.memoize = http://svn.plone.org/svn/plone/plone.memoize
-# plone.app.blob = http://svn.plone.org/svn/plone/plone.app.blob
-# plone.app.contentrules = http://svn.plone.org/svn/plone/plone.app.contentrules
-# Products.ExtendedPathIndex = http://svn.plone.org/svn/plone/Products.ExtendedPathIndex
-# plone.app.form = http://svn.plone.org/svn/plone/plone.app.form
-# plone.app.layout = http://svn.plone.org/svn/plone/plone.app.layout
-# plone.app.workflow = http://svn.plone.org/svn/plone/plone.app.workflow
-# plone.caching = http://svn.plone.org/svn/plone/plone.caching
-# plone.intelligenttext = http://svn.plone.org/svn/plone/plone.intelligenttext
-# plone.app.folder = http://svn.plone.org/svn/plone/plone.app.folder
-# plone.app.linkintegrity = http://svn.plone.org/svn/plone/plone.app.linkintegrity
-# plone.browserlayer = http://svn.plone.org/svn/plone/plone.browserlayer
-# plone.registry = http://svn.plone.org/svn/plone/plone.registry
-# plone.app.iterate = http://svn.plone.org/svn/plone/plone.app.iterate
-# plonetheme.sunburst = http://svn.plone.org/svn/plone/plonetheme.sunburst
-# plone.folder = http://svn.plone.org/svn/plone/plone.folder
-# plone.autoform = http://svn.plone.org/svn/plone/plone.autoform
-# plone.app.redirector = http://svn.plone.org/svn/plone/plone.app.redirector
-# plone.theme = http://svn.plone.org/svn/plone/plone.theme
-# plone.i18n = http://svn.plone.org/svn/plone/plone.i18n
-# plone.app.content = http://svn.plone.org/svn/plone/plone.app.content
-# plone.app.registry = http://svn.plone.org/svn/plone/plone.app.registry
-# plone.openid = http://svn.plone.org/svn/plone/plone.openid
-# plone.fieldsets = http://svn.plone.org/svn/plone/plone.fieldsets
-# plone.app.z3cform = http://svn.plone.org/svn/plone/plone.app.z3cform
-# plone.app.customerize = http://svn.plone.org/svn/plone/plone.app.customerize
-# plonetheme.classic = http://svn.plone.org/svn/plone/plonetheme.classic
-# plone.app.controlpanel = http://svn.plone.org/svn/plone/plone.app.controlpanel
-# plone.app.viewletmanager = http://svn.plone.org/svn/plone/plone.app.viewletmanager
-# plone.app.kss = http://svn.plone.org/svn/plone/plone.app.kss
-# Products.CMFPlone = http://svn.plone.org/svn/plone/Products.CMFPlone
-# plone.app.caching = http://svn.plone.org/svn/plone/plone.app.caching
-# plone.app.users = http://svn.plone.org/svn/plone/plone.app.users
-# plone.app.imaging = http://svn.plone.org/svn/plone/plone.app.imaging
-# plone.testing = http://svn.plone.org/svn/plone/plone.testing
-# Products.ResourceRegistries = http://svn.plone.org/svn/plone/ResourceRegistries
-# plone.app.contentmenu = http://svn.plone.org/svn/plone/plone.app.contentmenu
-# plone.app.jquerytools = http://svn.plone.org/svn/plone/plone.app.jquerytools
-# plone.portlets = http://svn.plone.org/svn/plone/plone.portlets
-# plone.app.uuid = http://svn.plone.org/svn/plone/plone.app.uuid
-# plone.stringinterp = http://svn.plone.org/svn/plone/plone.stringinterp
-# plone.contentrules = http://svn.plone.org/svn/plone/plone.contentrules
-# plone.app.portlets = http://svn.plone.org/svn/plone/plone.app.portlets
-# plone.app.upgrade = http://svn.plone.org/svn/plone/plone.app.upgrade
-# plone.cachepurging = http://svn.plone.org/svn/plone/plone.cachepurging
-# plone.app.openid = http://svn.plone.org/svn/plone/plone.app.openid
-# plone.scale = http://svn.plone.org/svn/plone/plone.scale
-# plone.indexer = http://svn.plone.org/svn/plone/plone.indexer
-# plone.app.discussion = http://svn.plone.org/svn/plone/plone.app.discussion
-# plone.keyring = http://svn.plone.org/svn/plone/plone.keyring
-# plone.app.vocabularies = http://svn.plone.org/svn/plone/plone.app.vocabularies
-# plone.portlet.static = http://svn.plone.org/svn/plone/plone.portlet.static
-# plone.app.i18n = http://svn.plone.org/svn/plone/plone.app.i18n
-# plone.outputfilters = http://svn.plone.org/svn/plone/plone.outputfilters
-# plone.uuid = http://svn.plone.org/svn/plone/plone.uuid
-# plone.protect = http://svn.plone.org/svn/plone/plone.protect
-# plone.session = http://svn.plone.org/svn/plone/plone.session
-# Products.LinguaPlone = http://svn.plone.org/svn/plone/Products.LinguaPlone
-# plone.locking = http://svn.plone.org/svn/plone/plone.locking
-# Plone = http://svn.plone.org/svn/plone/Plone
