--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -191,65 +191,65 @@ end repository
 
 
 match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/trunk/
-  repository plone.^1
+  repository plone.\1
   branch master
 end match
 
 match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/branches/([^/]+)/
-  repository plone.^1
+  repository plone.\1
   branch \2
 end match
 
 match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/tags/([^/]+)/
-  repository plone.^1
+  repository plone.\1
   branch refs/tags/\2
 end match
 
 
 match /plone.portlet.(collection|static)/trunk/
-  repository plone.portlet.^1
+  repository plone.portlet.\1
   branch master
 end match
 
 match /plone.portlet.(collection|static)/branches/([^/]+)/
-  repository plone.portlet.^1
+  repository plone.portlet.\1
   branch \2
 end match
 
 match /plone.portlet.(collection|static)/tags/([^/]+)/
-  repository plone.portlet.^1
+  repository plone.portlet.\1
   branch refs/tags/\2
 end match
 
 
 match /plonetheme.(classic|sunburst)/trunk/
-  repository plonetheme.^1
+  repository plonetheme.\1
   branch master
 end match
 
 match /plonetheme.(classic|sunburst)/branches/([^/]+)/
-  repository plonetheme.^1
+  repository plonetheme.\1
   branch \2
 end match
 
 match /plonetheme.(classic|sunburst)/tags/([^/]+)/
-  repository plonetheme.^1
+  repository plonetheme.\1
   branch refs/tags/\2
 end match
 
 
 match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/trunk/
-  repository plone.app.^1
+  repository plone.app.\1
   branch master
 end match
 
 match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/branches/([^/]+)/
-  repository plone.app.^1
+  repository plone.app.\1
   branch \2
 end match
 
 match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/tags/([^/]+)/
-  repository plone.app.^1
+  repository plone.app.\1
   branch refs/tags/\2
 end match
 
