Handle more edge-cases

--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -189,6 +189,17 @@ end repository
 create repository plonetheme.sunburst
 end repository
 
+match /trunk/
+    repository plone.portlets
+    branch master
+    min revision 10376
+    max revision 10378
+end match
+
+match /plone.folder/buildout/
+  repository plone.folder
+  branch master
+end match
 
 match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/trunk/
   repository plone.\1
@@ -238,6 +249,26 @@ match /plonetheme.(classic|sunburst)/tags/([^/]+)/
 end match
 
 
+match /plone.app.blob/buildouts/
+  repository plone.app.blob
+  branch master
+end match
+
+match /plone.app.discussion/buildouts/
+  repository plone.app.discussion
+  branch master
+end match
+
+match /plone.app.jqtools/trunk/
+  repository plone.app.jquerytools
+  branch master
+end match
+
+match /plone.app.kss/trunx/
+  repository plone.app.kss
+  branch master
+end match
+
 match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/trunk/
   repository plone.app.\1
   branch master
@@ -248,13 +279,28 @@ match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|cus
   branch \2
 end match
 
+match /plone.z3cform/tags/0.3dev-r21645/
+  min revision 21796
+  max revision 21804
+end match
+
 match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/tags/([^/]+)/
   repository plone.app.\1
   branch refs/tags/\2
 end match
 
 
-match /(CMFPlone|Products.CMFPlone)/trunk/
+match /CMFPlone/branches/plips/plip-144-next-pre-nav/
+  min revision 11172
+  max revision 11173
+end match
+
+match /CMFPlone/kss-uid-aware/
+    repository Products.CMFPlone
+    branch kss-uid-aware was
+end match
+
+match /(CMFPlone|Plone3rdParty|Products.CMFPlone)/trunk/
   repository Products.CMFPlone
   branch master
 end match
@@ -262,6 +308,11 @@ end match
 match /CMFPlone/2.1-cmf1.5/
   repository Products.CMFPlone
   branch 2.1-cmf1.5
+end match
+
+match /Plone3rdParty/branches/4.0/
+  repository Products.CMFPlone
+  branch 4.0
 end match
 
 match /(CMFPlone|Products.CMFPlone)/branches/([^/]+)/
