Ups, wrong name

--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -297,7 +297,7 @@ end match
 
 match /CMFPlone/kss-uid-aware/
     repository Products.CMFPlone
-    branch kss-uid-aware was
+    branch kss-uid-aware
 end match
 
 match /(CMFPlone|Plone3rdParty|Products.CMFPlone)/trunk/
