--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -201,6 +201,16 @@ match /plone.folder/buildout/
   branch master
 end match
 
+match /review/plip191-unified-folders/
+  repository plone.folder
+  branch master
+end match
+
+match /plone.registry/elro-records-proxy-collection/
+  repository plone.registry
+  branch elro-records-proxy-collection
+end match
+
 match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/trunk/
   repository plone.\1
   branch master
@@ -209,6 +219,11 @@ end match
 match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/branches/([^/]+)/
   repository plone.\1
   branch \2
+end match
+
+match /plone.z3cform/tags/0.3dev-r21645/
+  min revision 21796
+  max revision 21804
 end match
 
 match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|folder|i18n|indexer|intelligenttext|keyring|locking|memoize|openid|outputfilters|portlets|protect|registry|scale|session|stringinterp|supermodel|testing|theme|uuid)/tags/([^/]+)/
@@ -254,7 +269,12 @@ match /plone.app.blob/buildouts/
   branch master
 end match
 
-match /plone.app.discussion/buildouts/
+match /ploneout/branches/3.0-zodb3.8-integration/
+  repository plone.app.blob
+  branch master
+end match
+
+match /plone.app.discussion/(buidouts|buildouts)/
   repository plone.app.discussion
   branch master
 end match
@@ -277,11 +297,6 @@ end match
 match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/branches/([^/]+)/
   repository plone.app.\1
   branch \2
-end match
-
-match /plone.z3cform/tags/0.3dev-r21645/
-  min revision 21796
-  max revision 21804
 end match
 
 match /plone.app.(blob|caching|content|contentmenu|contentrules|controlpanel|customerize|discussion|folder|form|i18n|imaging|iterate|jquerytools|kss|layout|linkintegrity|openid|portlets|redirector|registry|testing|upgrade|users|uuid|viewletmanager|vocabularies|workflow|z3cform)/tags/([^/]+)/
@@ -310,12 +325,7 @@ match /CMFPlone/2.1-cmf1.5/
   branch 2.1-cmf1.5
 end match
 
-match /Plone3rdParty/branches/4.0/
-  repository Products.CMFPlone
-  branch 4.0
-end match
-
-match /(CMFPlone|Products.CMFPlone)/branches/([^/]+)/
+match /(CMFPlone|Plone3rdParty|Products.CMFPlone)/branches/([^/]+)/
   repository Products.CMFPlone
   branch \2
 end match
