Flatten historical and plips subbranches

--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -325,6 +325,16 @@ match /CMFPlone/2.1-cmf1.5/
   branch 2.1-cmf1.5
 end match
 
+match /CMFPlone/branches/historical/([^/]+)/
+  repository Products.CMFPlone
+  branch historical-\1
+end match
+
+match /CMFPlone/branches/plips/([^/]+)/
+  repository Products.CMFPlone
+  branch plips-\1
+end match
+
 match /(CMFPlone|Plone3rdParty|Products.CMFPlone)/branches/([^/]+)/
   repository Products.CMFPlone
   branch \2
