Deal with historical branches for Archetypes

--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -88,6 +88,11 @@ match /(generator|Archetypes|Products.Archetypes)/trunk/
   branch master
 end match
 
+match /Archetypes/branches/historical/([^/]+)/
+  repository Products.Archetypes
+  branch historical-\1
+end match
+
 match /(generator|Archetypes|Products.Archetypes)/branches/([^/]+)/
   repository Products.Archetypes
   branch \2
