Even more edge-cases

--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -88,9 +88,9 @@ match /(generator|Archetypes|Products.Archetypes)/trunk/
   branch master
 end match
 
-match /Archetypes/branches/historical/([^/]+)/
+match /(generator|Archetypes)/branches/historical/([^/]+)/
   repository Products.Archetypes
-  branch historical-\1
+  branch historical-\2
 end match
 
 match /(generator|Archetypes|Products.Archetypes)/branches/([^/]+)/
@@ -109,6 +109,11 @@ match /(Marshall|Products.Marshall)/trunk/
   branch master
 end match
 
+match /Marshall/branches/historical/([^/]+)/
+  repository Products.Marshall
+  branch historical-\1
+end match
+
 match /(Marshall|Products.Marshall)/branches/([^/]+)/
   repository Products.Marshall
   branch \2
@@ -125,6 +130,11 @@ match /(MimetypesRegistry|Products.MimetypesRegistry)/trunk/
   branch master
 end match
 
+match /MimetypesRegistry/branches/historical/([^/]+)/
+  repository Products.MimetypesRegistry
+  branch historical-\1
+end match
+
 match /(MimetypesRegistry|Products.MimetypesRegistry)/branches/([^/]+)/
   repository Products.MimetypesRegistry
   branch \2
@@ -139,6 +149,11 @@ end match
 match /(PortalTransforms|Products.PortalTransforms)/trunk/
   repository Products.PortalTransforms
   branch master
+end match
+
+match /PortalTransforms/branches/historical/([^/]+)/
+  repository Products.PortalTransforms
+  branch historical-\1
 end match
 
 match /(PortalTransforms|Products.PortalTransforms)/branches/([^/]+)/
@@ -169,6 +184,11 @@ match /validation/branches/gotcha-validation-i18n/
   max revision 3862
 end match
 
+match /validation/branches/historical/([^/]+)/
+  repository Products.validation
+  branch historical-\1
+end match
+
 match /(validation|Products.validation)/branches/([^/]+)/
   repository Products.validation
   branch \2
@@ -178,7 +198,6 @@ match /(validation|Products.validation)/tags/([^/]+)/
   repository Products.validation
   branch refs/tags/\2
 end match
-
 
 
 # ignore everything else
