--- a/rules-plone.cfg
+++ b/rules-plone.cfg
@@ -222,7 +222,7 @@ match /plone.(autoform|browserlayer|cachepurging|caching|contentrules|fieldsets|
 end match
 
 match /plone.z3cform/tags/0.3dev-r21645/
-  min revision 21796
+  min revision 21795
   max revision 21804
 end match
 
@@ -269,7 +269,7 @@ match /plone.app.blob/buildouts/
   branch master
 end match
 
-match /ploneout/branches/3.0-zodb3.8-integration/
+match /ploneout/branches/(zodb3.8-integration|3.0-zodb3.8-integration)/
   repository plone.app.blob
   branch master
 end match
