Ignore some particular ill-behaved tags

--- a/rules-archetypes.cfg
+++ b/rules-archetypes.cfg
@@ -98,6 +98,9 @@ match /(generator|Archetypes|Products.Archetypes)/branches/([^/]+)/
   branch \2
 end match
 
+match /Archetypes/tags/(last_known_working|tag_05062003|v1_0_aprilfools)/
+end match
+
 match /(generator|Archetypes|Products.Archetypes)/tags/([^/]+)/
   repository Products.Archetypes
   branch refs/tags/\2
