--- a/rules-collective.cfg
+++ b/rules-collective.cfg
@@ -1,34 +1,70 @@
 # rules for the collective repository
 
+create repository borg.localrole
+end repository
+
+create repository Products.CMFFormController
+end repository
+
+
+match /borg/components/borg.localrole/trunk/
+  repository Products.CMFFormController
+  branch master
+end match
+
+match /borg/components/borg.localrole/branches/([^/]+)/
+  repository borg.localrole
+  branch \1
+end match
+
+match /borg/components/borg.localrole/tags/([^/]+)/
+  repository borg.localrole
+  branch refs/tags/\1
+end match
+
+
+match /CMFFormController/trunk/
+  repository Products.CMFFormController
+  branch master
+end match
+
+match /CMFFormController/branches/([^/]+)/
+  repository Products.CMFFormController
+  branch \1
+end match
+
+match /CMFFormController/tags/([^/]+)/
+  repository Products.CMFFormController
+  branch refs/tags/\1
+end match
+
 
 # ignore everything else
 match /
 end match
 
 # TODO
-# Products.CMFFormController = http://svn.plone.org/svn/collective/CMFFormController
-# Products.CMFTestCase = http://svn.plone.org/svn/collective/Products.CMFTestCase
-# Products.CMFDynamicViewFTI = http://svn.plone.org/svn/collective/CMFDynamicViewFTI
+# collective.monkeypatcher = http://svn.plone.org/svn/collective/collective.monkeypatcher
+# plone.recipe.alltests = http://svn.plone.org/svn/collective/buildout/plone.recipe.alltests
+# plone.recipe.zeoserver = http://svn.plone.org/svn/collective/buildout/plone.recipe.zeoserver
 # plone.recipe.zope2instance = http://svn.plone.org/svn/collective/buildout/plone.recipe.zope2instance
+# Products.ATContentTypes = http://svn.plone.org/svn/collective/Products.ATContentTypes
+# Products.CMFDiffTool = http://svn.plone.org/svn/collective/Products.CMFDiffTool
+# Products.CMFDynamicViewFTI = http://svn.plone.org/svn/collective/CMFDynamicViewFTI
 # Products.CMFEditions = http://svn.plone.org/svn/collective/Products.CMFEditions
+# Products.CMFPlacefulWorkflow = http://svn.plone.org/svn/collective/Products.CMFPlacefulWorkflow
+# Products.CMFQuickInstallerTool = http://svn.plone.org/svn/collective/CMFQuickInstallerTool
+# Products.CMFTestCase = http://svn.plone.org/svn/collective/Products.CMFTestCase
+# Products.contentmigration = http://svn.plone.org/svn/collective/Products.contentmigration
 # Products.GroupUserFolder = http://svn.plone.org/svn/collective/Products.GroupUserFolder
 # Products.i18ntestcase = http://svn.plone.org/svn/collective/Products.i18ntestcase
-# plone.recipe.zeoserver = http://svn.plone.org/svn/collective/buildout/plone.recipe.zeoserver
-# Products.SecureMailHost = http://svn.plone.org/svn/collective/SecureMailHost
-# Products.TinyMCE = http://svn.plone.org/svn/collective/Products.TinyMCE
-# Products.CMFDiffTool = http://svn.plone.org/svn/collective/Products.CMFDiffTool
 # Products.PasswordResetTool = http://svn.plone.org/svn/collective/Products.PasswordResetTool
-# Products.CMFQuickInstallerTool = http://svn.plone.org/svn/collective/CMFQuickInstallerTool
 # Products.PlacelessTranslationService = http://svn.plone.org/svn/collective/PlacelessTranslationService
-# borg.localrole = http://svn.plone.org/svn/collective/borg/components/borg.localrole
-# wicked = http://svn.plone.org/svn/collective/wicked
-# Products.contentmigration = http://svn.plone.org/svn/collective/Products.contentmigration
-# txtfilter = http://svn.plone.org/svn/collective/txtfilter
-# Products.ATContentTypes = http://svn.plone.org/svn/collective/Products.ATContentTypes
-# Products.statusmessages = http://svn.plone.org/svn/collective/statusmessages
+# Products.PloneLanguageTool = http://svn.plone.org/svn/collective/PloneLanguageTool
 # Products.PlonePAS = http://svn.plone.org/svn/collective/Products.PlonePAS
 # Products.PloneTestCase = http://svn.plone.org/svn/collective/Products.PloneTestCase
-# collective.monkeypatcher = http://svn.plone.org/svn/collective/collective.monkeypatcher
-# Products.PloneLanguageTool = http://svn.plone.org/svn/collective/PloneLanguageTool
-# plone.recipe.alltests = http://svn.plone.org/svn/collective/buildout/plone.recipe.alltests
-# Products.CMFPlacefulWorkflow = http://svn.plone.org/svn/collective/Products.CMFPlacefulWorkflow
+# Products.SecureMailHost = http://svn.plone.org/svn/collective/SecureMailHost
+# Products.statusmessages = http://svn.plone.org/svn/collective/statusmessages
+# Products.TinyMCE = http://svn.plone.org/svn/collective/Products.TinyMCE
+# txtfilter = http://svn.plone.org/svn/collective/txtfilter
+# wicked = http://svn.plone.org/svn/collective/wicked
